# AI-SCANNER

./: Dockerfile  README.md  alembic.ini  docker-compose.fixed.yml  docker-compose.yml  index.html  package.json  postcss.config.js  pyproject.toml  render.yaml  requirements.txt  runtime.txt  setup.py  setup.sh  tailwind.config.js  vite.config.js  vite.config.ts
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py  models.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py  router.py
app/core/: config.py  database.py
app/models/: __init__.py
app/routes/: auth.py  books.py  chat.py
app/schemas/: __init__.py
app/services/: chat_engine.py  conversation_memory.py  embeddings.py  file_processor.py  text_chunker.py  vector_store.py
architecture/: blueprint.md
backend/: Dockerfile  app.py  render.yaml  requirements.txt
backend/src/api/routes/: index.ts
backend/src/config/: cors.ts
backend/src/middleware/: errorHandler.ts
config/: email_config.py  redis_config.py
deployment/: Dockerfile  README.md  github-actions.yml  render.yaml  requirements.txt
docs/: dependency_guide.md
frontend/: index.html  script.js  style.css
frontend/src/config/: websocket.ts
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/api/: client.ts
frontend/src/services/: websocket.service.ts
frontend/src/utils/: environment.ts
public/: index.html
public/css/: style.css
public/js/: app.js
scripts/: check_versions.py  deploy_setup.sh  fix_requirements.py  health_check.py  install_deps.py  validate-connections.js
server/: index.js
services/: email_service.py
shared/types/: api.types.ts
src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx
src/api/: rate_limiter.py
src/architecture/: analysis.md
src/components/: BookList.tsx  ChatInterface.tsx  FileUpload.tsx  Layout.tsx  MessageList.tsx  MetricCard.jsx  ServerList.jsx
src/core/cache/: redis_manager.py
src/core/config/: environment.py
src/core/database/: connection_pool.py
src/core/security/: auth_fixes.py
src/hooks/: useChatStream.ts  useFileUpload.ts
src/lib/: utils.ts
src/middleware/: request_validator.py
src/pages/: BooksPage.tsx  ChatPage.tsx  Dashboard.tsx  NotFound.tsx  SettingsPage.tsx
src/services/: api.ts
src/utils/: error_handlers.py
tests/: test_security_fixes.py
utils/: dependency_checker.py  redis_health_check.py
