[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codecraft-ai"
version = "0.1.0"
description = "High-concurrency architectural engine for AI-driven code synthesis"
readme = "README.md"
authors = [
    { name = "CodeCraft AI Team", email = "dev@codecraft.ai" },
]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
keywords = ["ai", "code-generation", "architecture", "concurrency", "synthesis"]
requires-python = ">=3.9"
dependencies = [
    # Core dependencies
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "typer>=0.9.0,<0.10.0",
    "rich>=13.7.0,<14.0.0",
    
    # Async/Concurrency
    "anyio>=4.0.0,<5.0.0",
    "asyncio-mqtt>=0.16.0,<0.17.0",
    "aiohttp>=3.9.0,<4.0.0",
    "aioredis>=2.0.0,<3.0.0",
    "celery>=5.3.0,<6.0.0",
    
    # LLM/API integrations
    "openai>=1.12.0,<2.0.0",
    "anthropic>=0.18.0,<0.19.0",
    "litellm>=1.0.0,<2.0.0",
    "tiktoken>=0.5.0,<0.6.0",
    
    # Code analysis and manipulation
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.5.0,<1.6.0",
    "libcst>=1.1.0,<1.2.0",
    "black>=23.0,<24.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.8.0,<1.9.0",
    "ruff>=0.1.0,<0.2.0",
    
    # File and project management
    "watchfiles>=0.21.0,<0.22.0",
    "pathspec>=0.11.0,<0.12.0",
    "pyyaml>=6.0.0,<7.0.0",
    "tomlkit>=0.12.0,<0.13.0",
    
    # Testing and validation
    "pytest>=7.4.0,<8.0.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "hypothesis>=6.92.0,<7.0.0",
    
    # Monitoring and observability
    "prometheus-client>=0.19.0,<0.20.0",
    "structlog>=23.0,<24.0",
    
    # Utilities
    "click>=8.1.0,<9.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "cachetools>=5.3.0,<6.0.0",
    "tenacity>=8.2.0,<9.0.0",
    "python-multipart>=0.0.6,<0.0.7",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.18.0,<9.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "pre-commit>=3.5.0,<4.0.0",
    "mypy>=1.8.0,<1.9.0",
    "ruff>=0.1.0,<0.2.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "sphinx>=7.2.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
]
aws = [
    "boto3>=1.34.0,<2.0.0",
    "aioboto3>=12.0.0,<13.0.0",
]
gcp = [
    "google-cloud-aiplatform>=1.38.0,<2.0.0",
    "google-cloud-storage>=2.13.0,<3.0.0",
]
azure = [
    "azure-identity>=1.15.0,<2.0.0",
    "azure-openai>=1.0.0,<2.0.0",
]
postgres = [
    "asyncpg>=0.29.0,<0.30.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "alembic>=1.12.0,<2.0.0",
]
mongodb = [
    "motor>=3.3.0,<4.0.0",
    "pymongo>=4.6.0,<5.0.0",
]
redis = [
    "redis>=5.0.0,<6.0.0",
    "hiredis>=2.2.0,<3.0.0",
]
rabbitmq = [
    "aio-pika>=9.4.0,<10.0.0",
    "pika>=1.3.0,<2.0.0",
]
kafka = [
    "aiokafka>=0.8.0,<0.9.0",
    "confluent-kafka>=2.2.0,<3.0.0",
]
grpc = [
    "grpcio>=1.60.0,<2.0.0",
    "grpcio-tools>=1.60.0,<2.0.0",
    "protobuf>=4.25.0,<5.0.0",
]
websockets = [
    "websockets>=12.0,<13.0",
    "wsproto>=1.2.0,<2.0.0",
]
graphql = [
    "strawberry-graphql>=0.215.0,<0.216.0",
    "graphql-core>=3.2.0,<4.0.0",
]
ml = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "transformers>=4.36.0,<5.0.0",
    "torch>=2.1.0,<3.0.0",
    "sentencepiece>=0.1.99,<0.2.0",
]
security = [
    "cryptography>=41.0.0,<42.0.0",
    "python-jose>=3.3.0,<4.0.0",
    "passlib>=1.7.4,<2.0.0",
]
monitoring = [
    "opentelemetry-api>=1.21.0,<2.0.0",
    "opentelemetry-sdk>=1.21.0,<2.0.0",
    "opentelemetry-instrumentation>=0.42.0,<0.43.0",
    "sentry-sdk>=1.38.0,<2.0.0",
    "datadog>=0.48.0,<0.49.0",
]

[project.urls]
Homepage = "https://github.com/codecraft-ai/codecraft"
Documentation = "https://docs.codecraft.ai"
Repository = "https://github.com/codecraft-ai/codecraft.git"
Issues = "https://github.com/codecraft-ai/codecraft/issues"
Changelog = "https://github.com/codecraft-ai/codecraft/releases"

[project.scripts]
codecraft = "codecraft.cli:app"
codecraft-serve = "codecraft.server.main:serve"
codecraft-worker = "codecraft.worker.main:start_worker"
codecraft-validate = "codecraft.validation.main:validate_project"

[project.entry-points."codecraft.plugins"]
manifest_parser = "codecraft.plugins.manifest:ManifestPlugin"
code_synthesizer = "codecraft.plugins.synthesis:CodeSynthesizerPlugin"
validation_engine = "codecraft.plugins.validation:ValidationPlugin"
concurrency_manager = "codecraft.plugins.concurrency:ConcurrencyPlugin"

[tool.setuptools]
packages = [
    "codecraft",
    "codecraft.core",
    "codecraft.plugins",
    "codecraft.server",
    "codecraft.worker",
    "codecraft.validation",
    "codecraft.cli",
    "codecraft.models",
    "codecraft.schemas",
    "codecraft.utils",
    "codecraft.integrations",
]

[tool.setuptools.package-dir]
"codecraft" = "src/codecraft"
"codecraft.core" = "src/codecraft/core"
"codecraft.plugins" = "src/codecraft/plugins"
"codecraft.server" = "src/codecraft/server"
"codecraft.worker" = "src/codecraft/worker"
"codecraft.validation" = "src/codecraft/validation"
"codecraft.cli" = "src/codecraft/cli"
"codecraft.models" = "src/codecraft/models"
"codecraft.schemas" = "src/codecraft/schemas"
"codecraft.utils" = "src/codecraft/utils"
"codecraft.integrations" = "src/codecraft/integrations"

[tool.setuptools.packages.find]
where = ["src"]
include = ["codecraft*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tests.*",
    "examples.*",
    "docs.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "YTT", # flake8-2020
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "B905",  # `zip()` without an explicit `strict=` parameter
]
unfixable = [
    "F401",  # unused import
    "F841",  # unused variable
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B008", "S101"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=codecraft",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--asyncio-mode=auto",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow tests",
    "async: async tests",
    "db: database tests",
    "api: API tests",
]

[tool.coverage.run]
source = ["codecraft"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/setup.py",
    "*/conftest.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[project]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "codecraft.__version__"}
readme = {file = ["README.md", "README.rst"], content-type = "text/markdown"}

[tool.setuptools_scm]
write_to = "src/codecraft/_version.py"
write_to_template = "__version__ = '{version}'"
version_scheme = "post-release"
local_scheme = "no-local-version"

# Performance and optimization settings
[tool.codecraft]
max_concurrent_tasks = 100
default_timeout = 30.0
retry_attempts = 3
cache_ttl = 300
log_level = "INFO"
enable_metrics = true
enable_tracing = true

[tool.codecraft.llm]
default_provider = "openai"
default_model = "gpt-4-turbo-preview"
max_tokens = 8192
temperature = 0.7
top_p = 0.9

[tool.codecraft.synthesis]
max_file_size_kb = 100
allowed_extensions = [".py", ".js", ".ts", ".java", ".go", ".rs", ".cpp", ".c", ".h", ".hpp"]
default_indent_size = 4
validate_syntax = true
type_check = true
format_code = true

[tool.codecraft.validation]
strict_mode = true
require_types = true
max_cyclomatic_complexity = 15
max_cognitive_complexity = 25
max_nesting_depth = 4
min_test_coverage = 80.0

[tool.codecraft.concurrency]
worker_pool_size = 10
max_queue_size = 1000
heartbeat_interval = 30
task_timeout = 300
result_ttl = 3600

[tool.codecraft.cache]
backend = "redis"
default_ttl = 3600
max_size_mb = 1024
compression = true

[tool.codecraft.monitoring]
enable_prometheus = true
enable_sentry = false
enable_datadog = false
metrics_port = 9090
health_check_path = "/health"
ready_check_path = "/ready"
live_check_path = "/live"

# Environment-specific configurations
[tool.codecraft.environments.local]
log_level = "DEBUG"
enable_metrics = false
cache_backend = "memory"
database_url = "sqlite:///./local.db"
redis_url = "redis://localhost:6379/0"

[tool.codecraft.environments.development]
log_level = "INFO"
enable_metrics = true
cache_backend = "redis"
database_url = "postgresql://user:pass@localhost:5432/dev"
redis_url = "redis://localhost:6379/1"

[tool.codecraft.environments.staging]
log_level = "WARNING"
enable_metrics = true
cache_backend = "redis"
database_url = "postgresql://user:pass@staging-db:5432/staging"
redis_url = "redis://staging-redis:6379/0"

[tool.codecraft.environments.production]
log_level = "ERROR"
enable_metrics = true
cache_backend = "redis"
database_url = "